fix spacing in header

--- a/app/assets/stylesheets/master.css
+++ b/app/assets/stylesheets/master.css
@@ -233,9 +233,9 @@ li {
 	font-size: 32px;
 	width: 150px;
 	font-weight: bold;
-	margin-top: 30px;
+	margin-top: 15px;
 	padding-top: 8px;
-	padding-bottom: 8px;
+	padding-bottom: 12px;
 	text-align: center;
 	margin-left: 20px;
 	margin-right: 20px;
